# aimad

./: .gitignore  .travis.yml  AUTHORS  LICENSE  Makefile.am  README.md  cleanTrailingWhitespace.sh  configure.ac  success.sh
Derivs/AD/FirstAD/SW/: DIFFSIZES.f90  Makefile.am  aim_dv.f90  amat.m  build_a_dv.f90  call_likel_dv.f90  cofb_dv.m  comparemats.m  constructPiMat.f90  copy_w_dv.f90  daxpy_dv.f  dcopy_dv.f  ddot_dv.f  dgebak_dv.f  dgebal_dv.f  dgeesx_dv.f  dgehd2_dv.f  dgehrd_dv.f  dgemm_dv.f  dgemv_dv.f  dger_dv.f  dgesv_dv.f  dgetf2_dv.f  dgetrf_dv.f  dgetrs_dv.f  dhseqr_dv.f  diffsizes.mod  dlacn2_dv.f  dlacpy_dv.f  dladiv_dv.f  dlaexc_dv.f  dlahqr_dv.f  dlahr2_dv.f  dlaln2_dv.f  dlange_dv.f  dlanv2_dv.f  dlapy2_dv.f  dlaqr0_dv.f  dlaqr1_dv.f  dlaqr2_dv.f  (+72 more)
Derivs/AD/libraries/LIBAIM2/: Makefile.am  aim.f90  build_a.f90  call_aim.f90  constructq.f90  copy_w.f90  dgebal.f  dgeev2.f  eigensystem_analytd.f90  eigensystem_d.f90  exact_shift.f90  eyemat.f90  finite_diff.f90  get_zerocols.f90  get_zerorows.f90  invert.f90  kroneckerProduct.f90  loadcof.f90  matrixmult.f90  numeric_shiftsvd.f90  printmat.f90  printmatz.f90  scrap.m  shiftright.f90  sort.f  times2.f90  timing.c  writemat.f90
Derivs/AD/libraries/lapack-3.2.1/BLAS/SRC/: Makefile.am
Derivs/AD/libraries/lapack-3.2.1/SRC/: Makefile.am
Derivs/FD/SW/: Makefile.am  aim.f90  array_search.f90  beginfile.f90  build_a.f90  call_likel.f90  call_likel_d.f90  checkaim.f90  cofb.txt  eigensystem.f90  exact_shift.f90  existstrue.f90  get_hmat.f90  get_selector.f90  get_stable.f90  get_stable_singvals.f90  hmat.txt  invert.f90  kalman.f90  likelihood.f90  loaddata.f90  matrixmult.f90  moderror.f90  modminimizer.f90  modminimizer.mod  numeric_shift.f90  objfun_likel.f90  objfun_likel_2pt_fd.f90  reduced_form.f90  selectf.f90  shrinkspacesmall.f90  splitmat.f90  strmatch.f90  transp.f90  writemat.f90  writemat_screen.f90  writemat_total.f90  writematint_total.f90  zdatanew_112107.txt
