
bin_PROGRAMS = firstfd

firstfd_LDADD = ../../AD/libraries/lapack-3.2.1/SRC/liblapack.a ../../AD/libraries/lapack-3.2.1/BLAS/SRC/libblas.a

firstfd_SOURCES= moderror.f90 modminimizer.f90 \
aim.f90           constructPiMat.f90  get_hmat.f90             kalman.f90         objfun_likel_2pt_fd.f90  strmatch.f90 \
array_search.f90  constructq.f90      get_selector.f90         likelihood.f90     objfun_likel.f90         transp.f90 \
beginfile.f90     copy_w.f90          get_stable.f90           loaddata.f90       reduced_form.f90         writemat.f90 \
build_a.f90       eigensystem.f90     get_stable_singvals.f90  matrixmult.f90     selectf.f90              writematint.f90 \
call_likel_d.f90  exact_shift.f90     get_zerocols.f90         shiftright.f90           writematint_total.f90 \
existstrue.f90      get_zerorows.f90         shrinkspacesmall.f90     writemat_screen.f90 \
eyemat.f90          invert.f90               numeric_shift.f90  splitmat.f90             writemat_total.f90
