
noinst_LIBRARIES = libblas.a

nodist_libblas_a_SOURCES = \
dasum.f   dcopy.f  dgemm.f  dnrm2.f  drotm.f   dscal.f  dspr2.f  dsymm.f  dsyr2k.f  dtbmv.f  dtpsv.f  dtrsm.f   dznrm2.f \
daxpy.f   ddot.f   dgemv.f  drot.f   drotmg.f  dsdot.f  dspr.f   dsymv.f  dsyr.f    dtbsv.f  dtrmm.f  dtrsv.f \
dcabs1.f  dgbmv.f  dger.f   drotg.f  dsbmv.f   dspmv.f  dswap.f  dsyr2.f  dsyrk.f   dtpmv.f  dtrmv.f  dzasum.f \
idamax.f lsame.f xerbla.f xerbla_array.f